nohup.out
 * Serving Flask app "server" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: on
 * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 325-790-689
 * Detected change in '/workspace/tensorflow/server.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 325-790-689
 * Detected change in '/workspace/tensorflow/server.py', reloading
 * Restarting with stat
  File "/workspace/tensorflow/server.py", line 35
    if request.method = 'GET':
                      ^
SyntaxError: invalid syntax
